# NetPro-test

CtcpClient/: CMakeLists.txt  logfile  main.cpp
CtcpClient/include/: CtcpClient.h
CtcpClient/src/: CtcpClient.cpp
CtcpServer/: CMakeLists.txt  logfile  main.cpp
CtcpServer/Logfile/: log
CtcpServer/include/: CtcpServe.h
CtcpServer/src/: CtcpServe.cpp
logfile/: CMakeLists.txt  logfile  main.cpp
logfile/include/: mkdir.h
logfile/src/: CMakeLists.txt  mkdir.cpp
